# xserver

./: .travis.yml  configure.ac  meson.build
Xext/: geext.c  sync.c  syncsrv.h
composite/: compext.c
damageext/: damageext.c
dri3/: dri3.h  dri3_priv.h  dri3_request.c
glamor/: glamor.c  glamor.h  glamor_composite_glyphs.c  glamor_copy.c  glamor_egl.c  glamor_fbo.c  glamor_font.c  glamor_priv.h  glamor_rects.c  glamor_render.c  glamor_segs.c  glamor_trapezoid.c  glamor_utils.h  glamor_xv.c
hw/dmx/: dmxpict.c
hw/kdrive/ephyr/: meson.build
hw/xfree86/drivers/modesetting/: driver.c  drmmode_display.c  drmmode_display.h
hw/xwayland/: xwayland-glamor.c
hw/xwin/: windisplay.c
include/: extinit.h  globals.h  misc.h  scrnintstr.h
mi/: miinitext.c
miext/damage/: damage.c  damage.h
miext/sync/: misyncstr.h
os/: Makefile.am  access.c  connection.c  io.c  meson.build  transport.c  utils.c  xdmauth.c  xdmcp.c  xtrans.c  xtrans.h  xtransint.h  xtranslcl.c  xtranssock.c  xtransutil.c
present/: present_request.c
randr/: randr.c  randrstr.h  rrdispatch.c  rrsdispatch.c
render/: render.c
test/: Makefile.am  meson.build  simple-xinit.c
test/bigreq/: request-length.c
test/scripts/: run-piglit.sh  travis-test.sh  xephyr-glamor-on-host.sh  xephyr-glamor-piglit.sh  xvfb-piglit.sh
xfixes/: xfixes.c  xfixesint.h
xkb/: xkbInit.c
